--- a/index.html
+++ b/index.html
@@ -185,6 +185,16 @@
             border-radius: 15px;
             font-size: 0.9em;
             color: #495057;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+        }
+
+        .skill-icon {
+            width: 16px;
+            height: 16px;
+            fill: currentColor;
+            opacity: 0.8;
         }
 
         ul {
@@ -527,24 +537,6 @@
 
 <body>
 
-    <!-- SVG 圖標定義區（隱藏） -->
-    <svg style="display: none;">
-
-        <!-- GitHub -->
-        <defs>
-            <symbol id="github-icon" viewBox="0 0 16 16">
-                <path
-                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z" />
-            </symbol>
-        </defs>
-
-        <!-- YouTube -->
-        <symbol id="youtube-icon" viewBox="0 0 16 16">
-            <path
-                d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z" />
-        </symbol>
-    </svg>
-
     <div class="container">
         <header>
 
@@ -862,37 +854,134 @@
             <section>
                 <h2>🛠️ 技能專長</h2>
                 <div class="skills-grid">
+
                     <div class="skill-category">
                         <h4>程式語言</h4>
                         <div class="skill-tags">
-                            <span class="skill-tag">C/C++</span>
-                            <span class="skill-tag">Python</span>
-                            <span class="skill-tag">JavaScript</span>
-                            <span class="skill-tag">Verilog</span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#cpp-icon"></use>
+                                </svg>
+                                C/C++
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#python-icon"></use>
+                                </svg>
+                                Python
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#javascript-icon"></use>
+                                </svg>
+                                JavaScript
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#verilog-icon"></use>
+                                </svg>
+                                Verilog
+                            </span>
                         </div>
                     </div>
 
-
                     <div class="skill-category">
-                        <h4>前端與視覺化</h4>
+                        <h4>前後端與視覺化</h4>
                         <div class="skill-tags">
-                            <span class="skill-tag">HTML</span>
-                            <span class="skill-tag">CSS</span>
-                            <span class="skill-tag">JavaScript</span>
-                            <span class="skill-tag">D3.js</span>
-                            <span class="skill-tag">Django</span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#html-icon"></use>
+                                </svg>
+                                HTML
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#css-icon"></use>
+                                </svg>
+                                CSS
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#javascript-icon"></use>
+                                </svg>
+                                JavaScript
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#d3-icon"></use>
+                                </svg>
+                                D3.js
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#django-icon"></use>
+                                </svg>
+                                Django
+                            </span>
                         </div>
                     </div>
 
                     <div class="skill-category">
                         <h4>AI & 影像處理</h4>
                         <div class="skill-tags">
-                            <span class="skill-tag">OpenCV</span>
-                            <span class="skill-tag">scikit-image</span>
-                            <span class="skill-tag">SURF</span>
-                            <span class="skill-tag">PyTorch (基礎)</span>
+                            <span class="skill-tag">
+                                <img src="icons/opencv.svg" class="skill-icon">
+                                OpenCV
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#python-icon"></use>
+                                </svg>
+                                scikit-image
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#opencv-icon"></use>
+                                </svg>
+                                SURF
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#pytorch-icon"></use>
+                                </svg>
+                                PyTorch (基礎)
+                            </span>
                         </div>
                     </div>
+
+                    <div class="skill-category">
+                        <h4>系統安裝與使用經驗</h4>
+                        <div class="skill-tags">
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#windows-icon"></use>
+                                </svg>
+                                Windows
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#linux-icon"></use>
+                                </svg>
+                                Linux
+                            </span>
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#docker-icon"></use>
+                                </svg>
+                                Docker
+                            </span>
+                            <span class="skill-tag">
+                                <img src="icons/virtualbox.svg" class="skill-icon">
+                                VirtualBox
+                            </span>
+                            <span class="skill-tag">
+                                <img src="icons/VMW.svg" class="skill-icon">
+                                VMware
+                            </span>
+                        </div>
+                    </div>
+
+
 
 
                 </div>
@@ -910,7 +999,7 @@
         </main>
     </div>
 
-    <script>
+    <script src="icons/icons.js">
         // 初始化所有可收合的區塊
         document.addEventListener('DOMContentLoaded', function () {
             // 創建收合功能
