--- a/index.html
+++ b/index.html
@@ -999,7 +999,9 @@
         </main>
     </div>
 
-    <script src="icons/icons.js">
+    <script src="icons/icons.js"></script>
+
+    <script>
         // 初始化所有可收合的區塊
         document.addEventListener('DOMContentLoaded', function () {
             // 創建收合功能
