--- a/index.html
+++ b/index.html
@@ -982,8 +982,6 @@
                     </div>
 
 
-
-
                 </div>
             </section>
 
@@ -1001,48 +999,9 @@
 
     <script src="icons/icons.js"></script>
 
+    <script src="js/collapsible.js"></script>
     <script>
-        // 初始化所有可收合的區塊
         document.addEventListener('DOMContentLoaded', function () {
-            // 創建收合功能
-            function createCollapsible(containerId, toggleText, defaultOpen = false) {
-                const container = document.getElementById(containerId);
-                if (!container) return;
-
-                // 創建包裝容器
-                const wrapper = document.createElement('div');
-                wrapper.className = 'collapsible-container';
-
-                // 創建切換按鈕
-                const toggle = document.createElement('div');
-                toggle.className = 'collapsible-toggle';
-                toggle.innerHTML = `
-                    <span>${toggleText}</span>
-                    <span class="collapsible-toggle-icon">${defaultOpen ? '▼' : '▶'}</span>
-                `;
-
-                // 創建內容容器
-                const content = document.createElement('div');
-                content.className = 'collapsible-content' + (defaultOpen ? ' active' : '');
-
-                // 將原內容移到新容器中
-                while (container.firstChild) {
-                    content.appendChild(container.firstChild);
-                }
-
-                // 組裝結構
-                wrapper.appendChild(toggle);
-                wrapper.appendChild(content);
-                container.appendChild(wrapper);
-
-                // 添加點擊事件
-                toggle.addEventListener('click', function () {
-                    const isActive = content.classList.contains('active');
-                    content.classList.toggle('active');
-                    toggle.querySelector('.collapsible-toggle-icon').textContent = isActive ? '▶' : '▼';
-                });
-            }
-
             // 技術架構圖
             createCollapsible('tech-architecture', '📊 查看技術架構圖', false);
 
@@ -1054,9 +1013,7 @@
 
             // Radix Sort 架構圖
             createCollapsible('radix-sort-architecture', '📊 查看演算法架構圖', false);
-
         });
-
     </script>
 
 </body>
