--- a/index.html
+++ b/index.html
@@ -981,6 +981,46 @@
                         </div>
                     </div>
 
+                    <div class="skill-category">
+                        <h4>工具</h4>
+                        <div class="skill-tags">
+
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#vscode-icon"></use>
+                                </svg>
+                                VScode
+                            </span>
+
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#git-icon"></use>
+                                </svg>
+                                Git
+                            </span>
+
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#github-icon"></use>
+                                </svg>
+                                GitHub
+                            </span>
+
+                            <span class="skill-tag">
+                                <svg class="skill-icon">
+                                    <use href="#chatgpt-icon"></use>
+                                </svg>
+                                ChatGPT
+                            </span>
+
+                            <span class="skill-tag">
+                                <img src="icons/claude.svg" class="skill-icon">
+                                Claude
+                            </span>
+
+                        </div>
+                    </div>
+
 
                 </div>
             </section>
