--- a/index.html
+++ b/index.html
@@ -711,10 +711,10 @@
 
                 <div class="project-item">
                     <h3>金融數據K線圖視覺化系統</h3>
-                    <p class="date">獨立開發 | 2024</p>
+                    <p class="date">獨立開發 | 2025</p>
 
                     <div class="achievement">
-                        🏆 實現百萬級數據點的流暢視覺化，支援年度到分鐘級別無縫縮放
+                        🏆 實現三百萬數據點的流暢視覺化，支援年度到分鐘級別無縫縮放
                     </div>
 
                     <div class="feature-tags">
@@ -726,7 +726,7 @@
 
                     <p><strong>專案動機：</strong><br>
                         起於對量化交易的興趣，需要一套自己的看盤系統，現有金融圖表工具在處理大量歷史數據時常有效能瓶頸，無法提供流暢的互動體驗，
-                        如TradimgView 且需要會員。本專案旨在開發一套高效能的K線圖視覺化系統，解決大數據量下的渲染效能問題。</p>
+                        如TradingView 且需要會員。本專案旨在開發一套高效能的K線圖視覺化系統，解決大數據量下的渲染效能問題。</p>
 
                     <p><strong>核心技術實作：</strong></p>
                     <ul>
@@ -755,7 +755,7 @@
 
                     <p><strong>關鍵成果：</strong></p>
                     <ul>
-                        <li>處理百萬級數據點仍保持流暢的 30fps 互動體驗</li>
+                        <li>處理三百萬數據點仍保持流暢的 30fps 互動體驗</li>
                         <li>支援從年度視圖到分鐘級別的 10,000x 縮放範圍</li>
                         <li>使用模組化架構，包含 DataManager、PerformanceOptimizer、DisplayModeManager 等類別</li>
                     </ul>
