--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
         }
 
         .skill-icon {
-            width: 16px;
-            height: 16px;
+            width: 24px;
+            height: 24px;
             fill: currentColor;
             opacity: 0.8;
         }
@@ -877,10 +877,12 @@
                                 JavaScript
                             </span>
                             <span class="skill-tag">
-                                <svg class="skill-icon">
-                                    <use href="#verilog-icon"></use>
-                                </svg>
+                                <img src="icons/xor.svg" class="skill-icon">
                                 Verilog
+                            </span>
+                            <span class="skill-tag">
+                                <img src="icons/asm.svg" class="skill-icon">
+                                組合語言
                             </span>
                         </div>
                     </div>
@@ -1039,7 +1041,7 @@
 
     <script src="icons/icons.js"></script>
 
-    <script src="js/collapsible.js"></script>
+    <script src="function/collapsible.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // 技術架構圖
